updated makePatient notebook

--- a/makePatient.ipynb
+++ b/makePatient.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook explores the fhirclient package\n",
+    "### This notebook explores the `fhirclient` package \n",
+    "(`pip install fhirclient`)\n",
     "* github\n",
     "    * https://github.com/smart-on-fhir/client-py\n",
     "* Documentation\n",
@@ -29,7 +30,8 @@
    "source": [
     "But the docs aren't very good at describing the methods and attributes that are in it. \n",
     "<p>\n",
-    "We can use `help()` to find out."
+    "### Using `help()`\n",
+    "We can use `help()` to find out more about the `patient` object."
    ]
   },
   {
@@ -242,7 +244,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `elementProperties()` method looks interesting"
+    "### The `elementProperties()` method looks interesting\n",
+    "\n",
+    "```\n",
+    "|  elementProperties(self)\n",
+    "|    Returns a list of tuples, one tuple for each property that should\n",
+    "|    be serialized, as: (\"name\", \"json_name\", type, is_list, \"of_many\", not_optional)\n",
+    "```"
    ]
   },
   {
@@ -375,7 +383,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just as the `help()` told us, we see a list of tuples. Let's make it a little easier to read."
+    "Just as the `help()` told us, we see a list of tuples. \n",
+    "<p>\n",
+    "Let's make it a little easier to read."
    ]
   },
   {
@@ -426,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each tuple has six members. From the `help(patient)`, we see what each member is:\n",
+    "Each tuple has six members. From the `help(patient)` result, we see what each member is:\n",
     "```\n",
     "|  elementProperties(self)\n",
     "|    Returns a list of tuples, one tuple for each property that should\n",
@@ -615,7 +625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's add a name.\n",
+    "### Let's add a name to Patient.\n",
     "<p>\n",
     "We see from `patient.elementsProperties()` that `name` has a type of `<class 'fhirclient.models.humanname.HumanName'>`"
    ]
@@ -782,6 +792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### POSTing a Patient\n",
     "Now that we built a Patient resource, we can try to POST it to an open FHIR server. We'll use the examples  are in github repo README to guide us, and use http://fhirtest.b12.org/baseDstu3 for the server. Although the example didn't have a POST example, we see a `create()` method described in `help(patient)`\n",
     "```\n",
     " |  create(self, server)\n",
@@ -804,7 +815,7 @@
       "text/plain": [
        "{'app_id': 'my_web_app',\n",
        " 'app_secret': None,\n",
-       " 'server': <server.FHIRServer at 0x103b91b00>,\n",
+       " 'server': <server.FHIRServer at 0x10bd7ed68>,\n",
        " 'scope': 'user/*.* patient/*.read openid profile',\n",
        " 'redirect': None,\n",
        " 'launch_token': None,\n",
@@ -857,7 +868,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x103b9e488>)\n",
+      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x10bd826a8>)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  from_state(self, state)\n",
@@ -941,13 +952,13 @@
       "    \"resourceType\": \"OperationOutcome\",\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2501/_history/1&quot; in 19ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2506/_history/1&quot; in 2ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
       "    },\n",
       "    \"issue\": [\n",
       "        {\n",
       "            \"severity\": \"information\",\n",
       "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2501/_history/1\\\" in 19ms\"\n",
+      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2506/_history/1\\\" in 2ms\"\n",
       "        }\n",
       "    ]\n",
       "}\n"
@@ -963,7 +974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The response tells us that patient was POSTed successfully and that it is in `Patient/2496/_history/1`. Unfortunately, it isn't structured in a way that let's me capture `Location` easily. Maybe there's a way to find it, but I haven't come across it yet. Looking at the issues for this package, it looks like someone has already reported this (https://github.com/smart-on-fhir/client-py/issues/24)"
+    "The response tells us that patient was POSTed successfully and that it is in `Patient/2496/_history/1`. Unfortunately, the response isn't structured in a way that let's me capture `Location` easily. Maybe there's a way to find it, but I haven't come across it yet, and at the moment I'd parse the `issue.diagnostics` string. Looking at the issues for this package, it looks like someone has already reported this (https://github.com/smart-on-fhir/client-py/issues/24)"
    ]
   },
   {
