--- a/makePatient.ipynb
+++ b/makePatient.ipynb
@@ -5,7 +5,11 @@
    "metadata": {},
    "source": [
     "### This notebook explores the `fhirclient` package \n",
-    "(`pip install fhirclient`)\n",
+    "* install with \n",
+    "    * `pip install fhirclient`\n",
+    "* versions\n",
+    "    * 3.00 (current at time of writing) is for STU3\n",
+    "    * 1.0.3 is for DSTU2\n",
     "* github\n",
     "    * https://github.com/smart-on-fhir/client-py\n",
     "* Documentation\n",
@@ -244,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The `elementProperties()` method looks interesting\n",
+    "### The `.elementProperties()` method looks interesting\n",
     "\n",
     "```\n",
     "|  elementProperties(self)\n",
@@ -383,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just as the `help()` told us, we see a list of tuples. \n",
+    "Just as `help()` told us, we see a list of tuples. \n",
     "<p>\n",
     "Let's make it a little easier to read."
    ]
@@ -444,7 +448,7 @@
     "```\n",
     "The first three elements are easy to figure out. The last three required looking at the FHIR [Patient](http://build.fhir.org/patient.html) resource specification to confirm suspicions.\n",
     "* `is_list` = Boolean that indicates if more than one member is allowed and therefore should be in a `list`, e.g., cardinality of `0..*`\n",
-    "* `of_many` = choice element (pick one), with prefix indicated, e.g, `deceasedBoolean` or `deceasedDateTime`\n",
+    "* `of_many` = choice of data types (pick one), with prefix indicated, e.g, `deceasedBoolean` or `deceasedDateTime`\n",
     "* `not_optional` = required, e.g., cardinality of `1..*`\n",
     "\n",
     "How many of these patient properties are required?"
@@ -549,7 +553,47 @@
    "source": [
     "Those 12 properties should be captured in a `list`.\n",
     "<p>\n",
-    "Another method for the patient object is `.as_json()` which was inherited from `fhirclient.models.fhirabstractresource.FHIRAbstractResource` and will serialize the object into JSON.<p>\n",
+    "Which, if any, of the patient properties are a `of_many`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('deceasedBoolean', 'deceasedBoolean', <class 'bool'>, False, 'deceased', False)\n",
+      "('deceasedDateTime', 'deceasedDateTime', <class 'fhirclient.models.fhirdate.FHIRDate'>, False, 'deceased', False)\n",
+      "('multipleBirthBoolean', 'multipleBirthBoolean', <class 'bool'>, False, 'multipleBirth', False)\n",
+      "('multipleBirthInteger', 'multipleBirthInteger', <class 'int'>, False, 'multipleBirth', False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for eproperty in patient.elementProperties():\n",
+    "    if eproperty[4] != None:\n",
+    "        print(eproperty)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">A word about choice of data types. From http://build.fhir.org/formats.html#choice,\n",
+    "<p>\n",
+    "<i>Elements that have a choice of data type cannot repeat - they must have a maximum cardinality of 1. When constructing an instance of an element with a choice of types, the authoring system must create a single element with a data type chosen from among the list of permitted data types.</i>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The `.as_json()` method\n",
+    "Another method for the patient object is `.as_json()` which was inherited from `fhirclient.models.fhirabstractresource.FHIRAbstractResource`<p>\n",
     "from `help(patient)`\n",
     "```\n",
     " |   as_json(self)\n",
@@ -569,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +622,7 @@
        "{'resourceType': 'Patient'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -625,14 +669,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's add a name to Patient.\n",
+    "### Add a name to Patient\n",
     "<p>\n",
-    "We see from `patient.elementsProperties()` that `name` has a type of `<class 'fhirclient.models.humanname.HumanName'>`"
+    "We see from `patient.elementsProperties()` that `name` has a type of `<class 'fhirclient.models.humanname.HumanName'>`\n",
+    "<p>\n",
+    "We'll create a `HumanName` object to hold this, and find out the properties it has."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -662,12 +708,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's build a name. Since `given` has `is_list` set to `True`, we need to put in a `list` or we'll get a `FHIRValidationError`. This is so we can have additional names as part of the full name (e.g., middle names). Since we can, we'll add a middle name."
+    "Let's build a name. Since `given` has `is_list` set to `True`, we need to put it in a `list` or we'll get a `FHIRValidationError`. This is so we can have additional names as part of the full name (e.g., middle names). Since we can, we'll add a middle name."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +861,7 @@
       "text/plain": [
        "{'app_id': 'my_web_app',\n",
        " 'app_secret': None,\n",
-       " 'server': <server.FHIRServer at 0x10bd7ed68>,\n",
+       " 'server': <server.FHIRServer at 0x107ce0e48>,\n",
        " 'scope': 'user/*.* patient/*.read openid profile',\n",
        " 'redirect': None,\n",
        " 'launch_token': None,\n",
@@ -826,7 +872,7 @@
        " '_save_func': <function fhirclient.client.FHIRClient.<lambda>(x)>}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +914,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x10bd826a8>)\n",
+      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x107cee620>)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  from_state(self, state)\n",
@@ -936,12 +982,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We'll use `smart.server` as the server.\n",
+    "<br>\n",
     "Now try POSTing the `patient` to the server using the `.create()` method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -952,13 +1000,13 @@
       "    \"resourceType\": \"OperationOutcome\",\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2506/_history/1&quot; in 2ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2510/_history/1&quot; in 3ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
       "    },\n",
       "    \"issue\": [\n",
       "        {\n",
       "            \"severity\": \"information\",\n",
       "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2506/_history/1\\\" in 2ms\"\n",
+      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2510/_history/1\\\" in 3ms\"\n",
       "        }\n",
       "    ]\n",
       "}\n"
@@ -974,7 +1022,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The response tells us that patient was POSTed successfully and that it is in `Patient/2496/_history/1`. Unfortunately, the response isn't structured in a way that let's me capture `Location` easily. Maybe there's a way to find it, but I haven't come across it yet, and at the moment I'd parse the `issue.diagnostics` string. Looking at the issues for this package, it looks like someone has already reported this (https://github.com/smart-on-fhir/client-py/issues/24)"
+    "The response tells us that patient was POSTed successfully and that it is in `Patient/2496/_history/1`. Unfortunately, the response isn't structured in a way that let's me capture `Location` easily. Maybe there's a way to find it, but I haven't come across it yet, and at the moment I'd parse the `issue.diagnostics` string. Looking at the github issues for this package, it looks like someone has already reported this (https://github.com/smart-on-fhir/client-py/issues/24)"
    ]
   },
   {
