worked on makePatient notebook

--- a/makePatient.ipynb
+++ b/makePatient.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notebook explores the `fhirclient` package \n",
+    "### Exploring the `fhirclient` package: creating a Patient, and POSTing it to a FHIR server\n",
     "* install with \n",
     "    * `pip install fhirclient`\n",
     "* versions\n",
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But the docs aren't very good at describing the methods and attributes that are in it. \n",
+    "But the docs are sparse at describing the methods and attributes that are in it. \n",
     "<p>\n",
     "### Using `help()`\n",
     "We can use `help()` to find out more about the `patient` object."
@@ -446,7 +446,7 @@
     "|    Returns a list of tuples, one tuple for each property that should\n",
     "|    be serialized, as: (\"name\", \"json_name\", type, is_list, \"of_many\", not_optional)\n",
     "```\n",
-    "The first three elements are easy to figure out. The last three required looking at the FHIR [Patient](http://build.fhir.org/patient.html) resource specification to confirm suspicions.\n",
+    "The first three items in a tuple are easy to figure out. The last three required looking at the FHIR [Patient](http://build.fhir.org/patient.html) resource specification to confirm suspicions.\n",
     "* `is_list` = Boolean that indicates if more than one member is allowed and therefore should be in a `list`, e.g., cardinality of `0..*`\n",
     "* `of_many` = choice of data types (pick one), with prefix indicated, e.g, `deceasedBoolean` or `deceasedDateTime`\n",
     "* `not_optional` = required, e.g., cardinality of `1..*`\n",
@@ -708,12 +708,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's build a name. Since `given` has `is_list` set to `True`, we need to put it in a `list` or we'll get a `FHIRValidationError`. This is so we can have additional names as part of the full name (e.g., middle names). Since we can, we'll add a middle name."
+    "Let's build a name.<br>\n",
+    "Since `given` has `is_list` set to `True`, we need to put it in a `list` or we'll get a `FHIRValidationError`. This is so we can have additional names as part of the full name (e.g., middle names). Since we can, we'll add a middle name. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name.family = 'Storm'\n",
+    "name.given = ['Jonathon', 'Lowell']\n",
+    "name.text = 'Jonathon Lowell Storm'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now define how the name is used. I haven't figured out if the valueset for `use` can be found in the models, but reading the specification for [`HumanName`](http://hl7.org/implement/standards/fhir/datatypes.html#HumanName), I see that `use` must be from http://hl7.org/implement/standards/fhir/valueset-name-use.html. We'll make it for `official` use. If we mistype this, a `FHIRValidationError` won't pop up here, but the FHIR server might when we POST it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -733,9 +752,6 @@
     }
    ],
    "source": [
-    "name.family = 'Storm'\n",
-    "name.given = ['Jonathon', 'Lowell']\n",
-    "name.text = 'Jonathon Lowell Storm'\n",
     "name.use = 'official'\n",
     "print(json.dumps(name.as_json(), indent=4))"
    ]
@@ -749,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +877,7 @@
       "text/plain": [
        "{'app_id': 'my_web_app',\n",
        " 'app_secret': None,\n",
-       " 'server': <server.FHIRServer at 0x107ce0e48>,\n",
+       " 'server': <server.FHIRServer at 0x10a712eb8>,\n",
        " 'scope': 'user/*.* patient/*.read openid profile',\n",
        " 'redirect': None,\n",
        " 'launch_token': None,\n",
@@ -872,7 +888,7 @@
        " '_save_func': <function fhirclient.client.FHIRClient.<lambda>(x)>}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +930,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x107cee620>)\n",
+      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x10a71a6a8>)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  from_state(self, state)\n",
@@ -989,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1000,13 +1016,13 @@
       "    \"resourceType\": \"OperationOutcome\",\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2510/_history/1&quot; in 3ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2514/_history/1&quot; in 18ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
       "    },\n",
       "    \"issue\": [\n",
       "        {\n",
       "            \"severity\": \"information\",\n",
       "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2510/_history/1\\\" in 3ms\"\n",
+      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2514/_history/1\\\" in 18ms\"\n",
       "        }\n",
       "    ]\n",
       "}\n"
