fixed types in makePatient notebook

--- a/makePatient.ipynb
+++ b/makePatient.ipynb
@@ -553,7 +553,7 @@
    "source": [
     "Those 12 properties should be captured in a `list`.\n",
     "<p>\n",
-    "Which, if any, of the patient properties are a `of_many`?"
+    "Which, if any, of the patient properties are `of_many`?"
    ]
   },
   {
@@ -593,7 +593,8 @@
    "metadata": {},
    "source": [
     "### The `.as_json()` method\n",
-    "Another method for the patient object is `.as_json()` which was inherited from `fhirclient.models.fhirabstractresource.FHIRAbstractResource`<p>\n",
+    "Another method for the patient object is `.as_json()` which was inherited from <br>\n",
+    "`fhirclient.models.fhirabstractresource.FHIRAbstractResource`<p>\n",
     "from `help(patient)`\n",
     "```\n",
     " |   as_json(self)\n",
@@ -877,7 +878,7 @@
       "text/plain": [
        "{'app_id': 'my_web_app',\n",
        " 'app_secret': None,\n",
-       " 'server': <server.FHIRServer at 0x10a712eb8>,\n",
+       " 'server': <server.FHIRServer at 0x111fe5c50>,\n",
        " 'scope': 'user/*.* patient/*.read openid profile',\n",
        " 'redirect': None,\n",
        " 'launch_token': None,\n",
@@ -930,7 +931,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x10a71a6a8>)\n",
+      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x111fed620>)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  from_state(self, state)\n",
@@ -1016,13 +1017,13 @@
       "    \"resourceType\": \"OperationOutcome\",\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2514/_history/1&quot; in 18ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2516/_history/1&quot; in 3ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
       "    },\n",
       "    \"issue\": [\n",
       "        {\n",
       "            \"severity\": \"information\",\n",
       "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2514/_history/1\\\" in 18ms\"\n",
+      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2516/_history/1\\\" in 3ms\"\n",
       "        }\n",
       "    ]\n",
       "}\n"
