--- a/makePatient.ipynb
+++ b/makePatient.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploring the `fhirclient` package: creating a Patient, and POSTing it to a FHIR server\n",
+    "## Exploring the `fhirclient` package: creating a Patient, and POSTing it to a FHIR server\n",
     "* install with \n",
     "    * `pip install fhirclient`\n",
+    "    * note: I modified `fhirclient/models/fhirabstractresource.py` so I can get the full response headers (see below), so copied the [`fhirclient`](https://github.com/smart-on-fhir/client-py/tree/master/fhirclient) package into my repo and edited it there. Doing this, I don't need to do the `pip install fhirclient`.\n",
     "* versions\n",
-    "    * 3.00 (current at time of writing) is for STU3\n",
+    "    * 3.2 (current at time of writing) is for STU3\n",
     "    * 1.0.3 is for DSTU2\n",
     "* github\n",
     "    * https://github.com/smart-on-fhir/client-py\n",
@@ -32,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But the docs are sparse at describing the methods and attributes that are in it. \n",
+    "But the docs are sparse at describing the methods and attributes that are in it, at least for newbies. \n",
     "<p>\n",
     "### Using `help()`\n",
     "We can use `help()` to find out more about the `patient` object."
@@ -878,7 +879,7 @@
       "text/plain": [
        "{'app_id': 'my_web_app',\n",
        " 'app_secret': None,\n",
-       " 'server': <server.FHIRServer at 0x104e6f780>,\n",
+       " 'server': <server.FHIRServer at 0x10423d9e8>,\n",
        " 'scope': 'user/*.* patient/*.read openid profile',\n",
        " 'redirect': None,\n",
        " 'launch_token': None,\n",
@@ -931,7 +932,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x104e75840>)\n",
+      " |  __init__(self, settings=None, state=None, save_func=<function FHIRClient.<lambda> at 0x104243ae8>)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  from_state(self, state)\n",
@@ -1032,6 +1033,34 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "requests.models.Response"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = patient.create(smart.server)\n",
+    "type(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mimic previous behaviour of `response` with `response.json()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -1039,13 +1068,13 @@
       "    \"resourceType\": \"OperationOutcome\",\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2606/_history/1&quot; in 3ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Patient/2609/_history/1&quot; in 15ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
       "    },\n",
       "    \"issue\": [\n",
       "        {\n",
       "            \"severity\": \"information\",\n",
       "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2606/_history/1\\\" in 3ms\"\n",
+      "            \"diagnostics\": \"Successfully created resource \\\"Patient/2609/_history/1\\\" in 15ms\"\n",
       "        }\n",
       "    ]\n",
       "}\n"
@@ -1053,7 +1082,6 @@
     }
    ],
    "source": [
-    "response = patient.create(smart.server)\n",
     "print(json.dumps(response.json(), indent=4))"
    ]
   },
@@ -1066,14 +1094,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Content-Encoding': 'gzip', 'Content-Type': 'application/fhir+json;charset=UTF-8', 'Date': 'Mon, 09 Apr 2018 04:12:59 GMT', 'ETag': 'W/\"1\"', 'Last-Modified': 'Mon, 09 Apr 2018 04:12:59 GMT', 'Location': 'http://fhirtest.b12x.org/baseDstu3/Patient/2606/_history/1', 'Server': 'Apache-Coyote/1.1', 'X-Powered-By': 'HAPI FHIR 3.0.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)', 'Content-Length': '356', 'Connection': 'keep-alive'}\n"
+      "{'Content-Encoding': 'gzip', 'Content-Type': 'application/fhir+json;charset=UTF-8', 'Date': 'Mon, 09 Apr 2018 23:39:37 GMT', 'ETag': 'W/\"1\"', 'Last-Modified': 'Mon, 09 Apr 2018 23:39:36 GMT', 'Location': 'http://fhirtest.b12x.org/baseDstu3/Patient/2609/_history/1', 'Server': 'Apache-Coyote/1.1', 'X-Powered-By': 'HAPI FHIR 3.0.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)', 'Content-Length': '357', 'Connection': 'keep-alive'}\n"
      ]
     }
    ],
@@ -1090,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1099,13 +1127,13 @@
      "text": [
       "Content-Encoding: gzip\n",
       "Content-Type: application/fhir+json;charset=UTF-8\n",
-      "Date: Mon, 09 Apr 2018 04:12:59 GMT\n",
+      "Date: Mon, 09 Apr 2018 23:39:37 GMT\n",
       "ETag: W/\"1\"\n",
-      "Last-Modified: Mon, 09 Apr 2018 04:12:59 GMT\n",
-      "Location: http://fhirtest.b12x.org/baseDstu3/Patient/2606/_history/1\n",
+      "Last-Modified: Mon, 09 Apr 2018 23:39:36 GMT\n",
+      "Location: http://fhirtest.b12x.org/baseDstu3/Patient/2609/_history/1\n",
       "Server: Apache-Coyote/1.1\n",
       "X-Powered-By: HAPI FHIR 3.0.0 REST Server (FHIR Server; FHIR 3.0.1/DSTU3)\n",
-      "Content-Length: 356\n",
+      "Content-Length: 357\n",
       "Connection: keep-alive\n"
      ]
     }
@@ -1124,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1133,32 +1161,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://fhirtest.b12x.org/baseDstu3/Patient/2606/_history/1\n"
+      "http://fhirtest.b12x.org/baseDstu3/Patient/2609/_history/1\n"
      ]
     }
    ],
    "source": [
     "print(response.headers['Location'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "requests.models.Response"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(response)"
    ]
   },
   {
