created makeSpecimen notebook

--- a/makeSpecimen.ipynb
+++ b/makeSpecimen.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We will build a Specimen resource using the [Patient](http://fhirtest.b12x.org/baseDstu3/Patient/2609) we created and uploaded in the [makePatient](makePatient.ipynb) notebook. We'll include that the specimen was from a buccal swab.\n",
+    "\n",
     "import packages we need..."
    ]
   },
@@ -26,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a Specimen object and take a look at its `.elementProperties()`."
+    "Create a Specimen object and take a look at its `.elementProperties()`. See the [makePatient](makePatient.ipynb) notebook for explanation of this method."
    ]
   },
   {
@@ -71,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which, if any, are required?"
+    "Which, if any, are required? We'll look at the `not_optional` boolean which is in the last position of the tuple."
    ]
   },
   {
@@ -97,8 +99,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`subject` is required.\n",
+    "<p>\n",
     "We'll use the id of the Patient that was posted to the same server.\n",
-    "We see from `.elementProperties()` that myspecimen.subject is a type of `fhirclient.models.fhirreference.FHIRReference`, so we'll build this."
+    "We see from `.elementProperties()` that myspecimen.subject is a type of `fhirclient.models.fhirreference.FHIRReference`, so we'll build this.\n",
+    "</p>\n",
+    "<p>First, create the `FHIRReference` object.</p>"
    ]
   },
   {
@@ -128,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "None of these are required, so we'll use the `reference` and point to the Patient we created."
+    "None of these are required, but we'll use the `reference` and point to the Patient we created."
    ]
   },
   {
@@ -194,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "None of these are required, but we'll add `bodySite` and `method`. Both are types of `fhirclient.models.codeableconcept.CodeableConcept`. We'll start with `bodySite`."
+    "None of these are required, but we'll add `bodySite` and `method`. Both are types of `fhirclient.models.codeableconcept.CodeableConcept`. We'll start with `bodySite`, which will be a SNOMED code for buccal space."
    ]
   },
   {
@@ -223,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll us `coding` which is a type of `fhirclient.models.coding.Coding`, which is a `is_list` so it must be put into a list."
+    "We'll use `coding` which is a type of `fhirclient.models.coding.Coding`. This is a `is_list` so it must be put into a list."
    ]
   },
   {
@@ -255,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nothing is required, but we'll add `system`, `code`, and `display`"
+    "Nothing is required. We'll add `system`, `code`, and `display`"
    ]
   },
   {
@@ -291,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's repeat this for `method`, which is another `CodeableConcept`"
+    "Let's repeat this for `method`, which is another `CodeableConcept`, to say it a swab."
    ]
   },
   {
@@ -382,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -393,13 +399,13 @@
       "    \"resourceType\": \"OperationOutcome\",\n",
       "    \"text\": {\n",
       "        \"status\": \"generated\",\n",
-      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Specimen/2610/_history/1&quot; in 7ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><h1>Operation Outcome</h1><table border=\\\"0\\\"><tr><td style=\\\"font-weight: bold;\\\">INFORMATION</td><td>[]</td><td><pre>Successfully created resource &quot;Specimen/2611/_history/1&quot; in 4ms</pre></td>\\n\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\n\\t\\t\\t</tr>\\n\\t\\t</table>\\n\\t</div>\"\n",
       "    },\n",
       "    \"issue\": [\n",
       "        {\n",
       "            \"severity\": \"information\",\n",
       "            \"code\": \"informational\",\n",
-      "            \"diagnostics\": \"Successfully created resource \\\"Specimen/2610/_history/1\\\" in 7ms\"\n",
+      "            \"diagnostics\": \"Successfully created resource \\\"Specimen/2611/_history/1\\\" in 4ms\"\n",
       "        }\n",
       "    ]\n",
       "}\n"
@@ -418,14 +424,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://fhirtest.b12x.org/baseDstu3/Specimen/2610/_history/1\n"
+      "http://fhirtest.b12x.org/baseDstu3/Specimen/2611/_history/1\n"
      ]
     }
    ],
@@ -436,9 +442,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "We can write out the `Specimen` to a file, as we did for `Patient`"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
