worked on makeSequence notebook

--- a/makeSequences.ipynb
+++ b/makeSequences.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Specimen was sent to the lab for HLA-A typing by full gene sequencing. Two sequences were acquired."
+    "The Specimen was sent to the lab for HLA-A typing by full gene sequencing. Two sequences were acquired. Both sequences are put into a single fasta file."
    ]
   },
   {
@@ -15,10 +15,12 @@
    "source": [
     "import json\n",
     "from Bio import SeqIO\n",
+    "from yattag import Doc\n",
     "from fhirclient import client\n",
     "import fhirclient.models.codeableconcept as cc\n",
     "import fhirclient.models.coding as co\n",
-    "import fhirclient.models.sequence as seq"
+    "import fhirclient.models.sequence as seq\n",
+    "import fhirclient.models.narrative as nar"
    ]
   },
   {
@@ -36,8 +38,9 @@
     }
    ],
    "source": [
-    "myseqs = list(SeqIO.parse(\"seq.fasta\", \"fasta\"))\n",
-    "for s in myseqs:\n",
+    "# check the fasta file for ids\n",
+    "myFastas = list(SeqIO.parse(\"seq.fasta\", \"fasta\"))\n",
+    "for s in myFastas:\n",
     "    print(s.id)"
    ]
   },
@@ -107,7 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mySeq.coordinateSystem = 0"
+    "mySeq.coordinateSystem = 0\n",
+    "mySeq.type = 'dna'"
    ]
   },
   {
@@ -167,14 +171,46 @@
     "refSeqIdCoding.system = 'http://www.ebi.ac.uk/ipd/imgt/hla/'\n",
     "refSeqIdCoding.version = '3.23'\n",
     "refSeqIdCoding.code = 'HLA00001'\n",
-    "refSeqIdCoding.display = myseqs[0].id\n",
+    "refSeqIdCoding.display = myFastas[0].id\n",
     "refSeqId.coding = [refSeqIdCoding] # is_list for coding is True, so must be put into a list\n",
     "print(json.dumps(refSeqId.as_json(), indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HLA-A*01:01:01:01\n",
+      "<div xmlns=\"http://www.w3.org/1999/xhtml\"><pre>this is HLA-A*01:01:01:01 end</pre></div>\n"
+     ]
+    }
+   ],
+   "source": [
+    "seqRef.referenceSeqId = refSeqId\n",
+    "seqRef.windowStart = 0\n",
+    "seqRef.windowEnd = len(myFastas[0].seq) # interval coordinate system, whole sequence\n",
+    "seqRef.referenceSeqString = str(myFastas[0].seq)\n",
+    "mySeq.referenceSeq = seqRef\n",
+    "# print(json.dumps(mySeq.as_json(), indent=4))\n",
+    "print(myFastas[0].id)\n",
+    "doc, tag, text = Doc().tagtext()\n",
+    "with tag('div', xmlns=\"http://www.w3.org/1999/xhtml\"):\n",
+    "    with tag('pre'):\n",
+    "        text('this is ' +  \n",
+    "             myFastas[0].id + \n",
+    "             ' end'\n",
+    "        )\n",
+    "# print(doc.getvalue())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -182,6 +218,10 @@
      "output_type": "stream",
      "text": [
       "{\n",
+      "    \"text\": {\n",
+      "        \"div\": \"<div xmlns=\\\"http://www.w3.org/1999/xhtml\\\"><pre>fasta id = HLA-A*01:01:01:01 \\nreference display = HLA-A*01:01:01:01 \\nreference system = http://www.ebi.ac.uk/ipd/imgt/hla/ \\nreference code = HLA00001 \\ncoordinate system = 0 \\nstart = 0 \\nend = 3503</pre></div>\",\n",
+      "        \"status\": \"generated\"\n",
+      "    },\n",
       "    \"coordinateSystem\": 0,\n",
       "    \"referenceSeq\": {\n",
       "        \"referenceSeqId\": {\n",
@@ -198,17 +238,48 @@
       "        \"windowEnd\": 3503,\n",
       "        \"windowStart\": 0\n",
       "    },\n",
+      "    \"type\": \"dna\",\n",
       "    \"resourceType\": \"Sequence\"\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "seqRef.referenceSeqId = refSeqId\n",
-    "seqRef.windowStart = 0\n",
-    "seqRef.windowEnd = len(myseqs[0].seq) # interval coordinate system, whole sequence\n",
-    "seqRef.referenceSeqString = str(myseqs[0].seq)\n",
-    "mySeq.referenceSeq = seqRef\n",
+    "myText = nar.Narrative()\n",
+    "myText.status = 'generated' # status is required\n",
+    "# use Doc from the yattag package to build the div\n",
+    "# use the id from the fasta file for the text\n",
+    "myDiv, tag, text = Doc().tagtext()\n",
+    "with tag('div', xmlns='http://www.w3.org/1999/xhtml'):\n",
+    "    with tag('table'):\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):\n",
+    "                text('fasta id')\n",
+    "            with tag('td'):\n",
+    "                text(myFastas[0].id)\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):\n",
+    "                text('reference display') \n",
+    "            with tag('td'):\n",
+    "                text(mySeq.referenceSeq.referenceSeqId.coding[0].display)\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):\n",
+    "                text('reference system')\n",
+    "            with tag('td'):\n",
+    "                text(mySeq.referenceSeq.referenceSeqId.coding[0].system)\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):\n",
+    "                text('reference code') \n",
+    "            with tag('td'):\n",
+    "                text(mySeq.referenceSeq.referenceSeqId.coding[0].code)\n",
+    "                \n",
+    "            + 'coordinate system = ' + str(mySeq.coordinateSystem) + \" \\n\"\n",
+    "            + 'start = ' + str(mySeq.referenceSeq.windowStart) + \" \\n\"\n",
+    "            + 'end = ' +   str(mySeq.referenceSeq.windowEnd)\n",
+    "        )\n",
+    "# print(doc.getvalue())\n",
+    "myText.div = myDiv.getvalue()\n",
+    "mySeq.text = myText\n",
     "print(json.dumps(mySeq.as_json(), indent=4))"
    ]
   },
@@ -216,22 +287,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```python\n",
+    "    import fhirclient.models.narrative as n\n",
+    "    narrative = n.Narrative()\n",
+    "    narrative.div = (\n",
+    "        '<div xmlns=\"http://www.w3.org/1999/xhtml\">'\n",
+    "        '<pre>HLA-A*01:01:01:01, exon 3</pre>'\n",
+    "        '</div>'\n",
+    "    )\n",
+    "    narrative.status = 'generated'\n",
+    "    sequence.text = narrative\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```xml\n",
+    "<text>\n",
+    "    <status value=\"generated\"/>\n",
+    "    <div xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+    "        <pre>&quot;HLA-A*01:01:01:01, exon 2&quot;</pre>\n",
+    "    </div>\n",
+    "</text>\n",
     "<type value=\"dna\"/>\n",
-    "        <coordinateSystem value=\"0\"/>\n",
-    "        <referenceSeq>\n",
-    "          <referenceSeqId>\n",
-    "            <coding>\n",
-    "              <system value=\"http://www.ebi.ac.uk/ipd/imgt/hla/\"/>\n",
-    "              <version value=\"3.23\"/>\n",
-    "              <code value=\"HLA00001\"/>\n",
-    "            </coding>\n",
-    "            <text value=\"HLA-A*01:01:01:01\"/>\n",
-    "          </referenceSeqId>\n",
-    "          <windowStart value=\"503\"/>\n",
-    "          <windowEnd value=\"773\"/>\n",
-    "        </referenceSeq>\n",
-    "        <observedSeq>\n",
+    "<coordinateSystem value=\"0\"/>\n",
+    "<referenceSeq>\n",
+    "    <referenceSeqId>\n",
+    "        <coding>\n",
+    "            <system value=\"http://www.ebi.ac.uk/ipd/imgt/hla/\"/>\n",
+    "            <version value=\"3.23\"/>\n",
+    "            <code value=\"HLA00001\"/>\n",
+    "            <display value=\"HLA-A*01:01:01:01\"/>\n",
+    "        </coding>\n",
+    "    </referenceSeqId>\n",
+    "    <windowStart value=\"503\"/>\n",
+    "    <windowEnd value=\"773\"/>\n",
+    "</referenceSeq>\n",
+    "<observedSeq value=\"GCTCCCAC...\"/>\n",
     "```"
    ]
   },
