--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -59,6 +59,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on package html:\n",
+      "\n",
+      "NAME\n",
+      "    html - General functions for HTML manipulation.\n",
+      "\n",
+      "PACKAGE CONTENTS\n",
+      "    entities\n",
+      "    parser\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    escape(s, quote=True)\n",
+      "        Replace special characters \"&\", \"<\" and \">\" to HTML-safe sequences.\n",
+      "        If the optional flag quote is true (the default), the quotation mark\n",
+      "        characters, both double quote (\") and single quote (') characters are also\n",
+      "        translated.\n",
+      "    \n",
+      "    unescape(s)\n",
+      "        Convert all named and numeric character references (e.g. &gt;, &#62;,\n",
+      "        &x3e;) in the string s to the corresponding unicode characters.\n",
+      "        This function uses the rules defined by the HTML 5 standard\n",
+      "        for both valid and invalid character references, and the list of\n",
+      "        HTML 5 named character references defined in html.entities.html5.\n",
+      "\n",
+      "DATA\n",
+      "    __all__ = ['escape', 'unescape']\n",
+      "\n",
+      "FILE\n",
+      "    /usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/html/__init__.py\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import html\n",
+    "help(html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<h1>Hello world!</h1>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from yattag import Doc\n",
+    "doc, tag, text = Doc().tagtext()\n",
+    "with tag('h1'):\n",
+    "    text('Hello world!')\n",
+    "print(doc.getvalue())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div xmlns=\"http://www.w3.org/1999/xhtml\"><table><tr><td>hello</td><td>world</td></tr><tr><td>2nd</td><td>row</td></tr></table></div>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from yattag import Doc\n",
+    "myDiv, tag, text = Doc().tagtext()\n",
+    "with tag('div', xmlns=\"http://www.w3.org/1999/xhtml\"):\n",
+    "    with tag('table'):\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):\n",
+    "                text('hello')\n",
+    "            with tag('td'):\n",
+    "                text('world')\n",
+    "        with tag('tr'):\n",
+    "            with tag('td'):\n",
+    "                text('2nd')\n",
+    "            with tag('td'):\n",
+    "                text('row')\n",
+    "print(myDiv.getvalue())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
